# trackward

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  SECURITY.md  build-order  deny.toml  docker-compose.yml  filetree  workflow-context
.github/workflows/: helm-lint.yml  policy-validation.yml  prompt-regression.yml  security.yml  test.yml
crates/chain-core/: Cargo.toml
crates/chain-core/src/: canonical_json.rs  chain.rs  encode.rs  lib.rs  merkle.rs
crates/chain-core/tests/: pinned_bytes.rs  pinned_merkle.rs
deploy/helm/trackward/: Chart.yaml  README.md  values.yaml
deploy/helm/trackward/templates/: _helpers.tpl  gateway-deployment.yaml  gateway-service.yaml  ingress.yaml  ledger-deployment.yaml  ledger-service.yaml  networkpolicy.yaml
docs/: integrate-an-agent.md  launch-plan.md
docs/runbooks/: backup-restore.md  incident-response.md  key-rotation.md
examples/claude-code/: README.md  settings.json
examples/claude-code/hooks/: trackward-post-tool.sh  trackward-pre-tool.sh  trackward-session-end.sh  trackward-session-start.sh  trackward-snapshot.sh  trackward-stop.sh  trackward-user-prompt.sh
infra/aws/: s3-object-lock.tf
infra/otel/: otel-collector.yaml
registry/evals/example-workflow/: 1.0.0.yaml
registry/evals/example-workflow/datasets/: bias_slices.jsonl  happy_path.jsonl  refusal_cases.jsonl
registry/policies/global/: 1.0.0.yaml
registry/prompts/example-workflow/1.0.0/: developer.md  metadata.yaml  output_schema.json  system.md  tool_policy.yaml
scripts/: demo-agent-run.sh  drill-restore.sh  trackward-tool.sh
services/gateway/: Cargo.toml
services/gateway/src/: auth.rs  config.rs  errors.rs  ledger_client.rs  lib.rs  main.rs  otel.rs  registry.rs  routes.rs  tls.rs
services/gateway/src/approval/: gates.rs  mod.rs
services/gateway/src/retrieval_proxy/: logging.rs  mod.rs
services/gateway/src/tool_proxy/: mod.rs  provenance.rs  routing.rs  side_effects.rs
services/gateway/tests/: approval.rs  phase4_records.rs  phase7_auth.rs  phase8_actor.rs  retrieval_proxy.rs  tool_proxy.rs  version_bindings.rs
services/gateway/tests/common/: mod.rs
services/ledger/: AGENTS.md  Cargo.toml
services/ledger/migrations/: 0001_runs_events_artifacts.sql  0002_tool_invocations_side_effects.sql  0003_guardrails_human_approvals.sql  0004_prompt_policy_eval.sql  0005_bias_slices.sql  0006_custody_events.sql  0007_cases.sql  0008_export_bundles.sql  0009_actor.sql  0010_hash_chain.sql  0011_merkle_anchors.sql
services/ledger/src/: actor.rs  anchoring.rs  auth.rs  chain.rs  config.rs  db.rs  errors.rs  hash.rs  lib.rs  main.rs  otel.rs  s3.rs  signing.rs  tls.rs
services/ledger/src/anchors/: memory.rs  mod.rs  s3.rs
services/ledger/src/models/: anchor.rs  artifact.rs  bias_slice.rs  case.rs  case_evidence.rs  custody_event.rs  eval_result.rs  event.rs  export_bundle.rs  guardrail.rs  human_approval.rs  mod.rs  policy_version.rs  prompt_version.rs  run.rs  run_version_binding.rs  side_effect.rs  tool_invocation.rs
services/ledger/src/routes/: anchors.rs  artifacts.rs  bias_slices.rs  case_evidence.rs  cases.rs  custody_events.rs  eval_results.rs  events.rs  export_bundles.rs  guardrails.rs  human_approvals.rs  mod.rs  policy_versions.rs  prompt_versions.rs  run_bindings.rs  runs.rs  side_effects.rs  tool_invocations.rs
services/ledger/tests/: integration.rs  phase10_mtls.rs  phase4_evidence.rs  phase5_custody.rs  phase5_e2e_verifier.rs  phase6_haruspex.rs  phase7_auth.rs  phase8_actor.rs  phase9_anchor.rs  phase9_chain.rs  registry_versions.rs
tools/trackward-model-proxy/: README.md  trackward-model-proxy.py
tools/verifier/: Cargo.toml
tools/verifier/src/: anchor.rs  lib.rs  main.rs
tools/verifier/tests/: verify.rs  verify_anchor.rs
