[workspace]
resolver = "2"
members = [
    "services/ledger",
    "services/gateway",
]

[workspace.dependencies]
axum = { version = "0.8", features = ["multipart"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "migrate"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.24"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.25"
uuid = { version = "1", features = ["v7", "serde"] }
aws-config = "1"
aws-sdk-s3 = "1"
thiserror = "2"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
