[package]
name = "gateway"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
axum-server = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }

[dev-dependencies]
dotenvy = "0.15"
reqwest = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
ledger = { path = "../ledger" }
rcgen = { workspace = true }
