[package]
name = "ledger"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
uuid = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
dotenvy = "0.15"
